--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,13 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     androidTestImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
+
+    //add swipe library for feed
+    compile 'com.huxq17.android:SwipeCardsView:1.3.4'
+
+    //add card view library for feed
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
