working but shit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".Signup">
         </activity>
+        <activity android:name=".CreateBook">
+        </activity>
     </application>
 
 </manifest>
