--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -25,7 +28,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    
+
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+
+
     testCompile 'io.cucumber:cucumber-java:4.0.0'
     testCompile 'io.cucumber:cucumber-junit:4.0.0'
 
@@ -33,7 +40,7 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support:design:26.0.1'
-    
+
 //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 //    compile 'com.android.support:design:25.2.0'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
