--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
     }
 }
 
+//TODO: fix this mess
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -31,10 +32,13 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
 
     testCompile 'io.cucumber:cucumber-java:4.0.0'
     testCompile 'io.cucumber:cucumber-junit:4.0.0'
+
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
 
     implementation 'com.google.firebase:firebase-core:16.0.4'
 
