--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,7 @@ fastlane/test_output
 fastlane/readme.md
 
 #idea files
-*.xml
+ .idea/misc.xml
+ .idea/modules.xml
+ .idea/runConfigurations.xml
+ .idea/vcs.xml
