added functionality to view profile button for the demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         </activity>
         <activity android:name=".CreateBook">
         </activity>
+        <activity android:name=".ViewProfile">
+        </activity>
     </application>
 
 </manifest>
